доработка некоторых функций
