# backend/validators/scheduleValidator.js
@@ -6,14 +6,6 @@ const workSlotSchema = Joi.object({
   end_time: Joi.string().pattern(/^\d{2}:\d{2}$/).required()
 });
 
-const breakSchema = Joi.object({
-  start_time: Joi.string().pattern(/^\d{2}:\d{2}$/).required(),
-  end_time: Joi.string().pattern(/^\d{2}:\d{2}$/).required()
-});
+const slotIdSchema = Joi.number().integer().positive().required();
 
-const availableSlotsSchema = Joi.object({
-    service_id: Joi.number().integer().required(),
-  });
-  
-
-module.exports = { workSlotSchema, breakSchema, availableSlotsSchema };
+module.exports = { workSlotSchema, slotIdSchema };
